deploy/carts-db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: carts-db
  labels:
    app: carts-db
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: carts-db
