deploy/catalogue-db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: catalogue-db
  labels:
    app: catalogue-db
spec:
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: catalogue-db
