deploy/catalogue-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: catalogue
  labels:
    app: catalogue
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: catalogue
