deploy/front-end-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: front-end
  labels:
    app: front-end
spec:
  #type: NodePort
  ports:
  - port: 80
    targetPort: 8079
    #nodePort: 30001
  selector:
    app: front-end
