deploy/orders-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: orders
  labels:
    app: orders
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: orders
