deploy/payment-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: payment
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: payment
