deploy/queue-master-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: queue-master
  labels:
    app: queue-master
  annotations:
    prometheus.io/path: "/prometheus"
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: queue-master
