deploy/shipping-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: shipping
  labels:
    app: shipping
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: shipping
