deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: socks-ingress
  namespace: test
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: front-end
          servicePort: 80
